apps/mail-gateway/overlays/test/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: mail-gateway
bases:
  - ../../base
resources:
  - ingress.yaml
